--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ psycopg2-binary==2.9.3
 python-decouple==3.6
 pytz==2022.2.1
 sqlparse==0.4.2
+SQLAlchemy==1.4.41
+SQLAlchemy-Utils==0.38.3
+pandas==1.4.4
